@@ -1,10 +1,15 @@
 language: python
 
+python: 3.5
 env:
     - TOXENV=py27
     - TOXENV=py33
+    - TOXENV=py34
+    - TOXENV=py35
     - TOXENV=pypy
+    - TOXENV=pypy3
     - TOXENV=coverage
+    - TOXENV=pep8
 install:
     - pip install tox
     - if [ "$TOXENV" = 'coverage' ]; then pip install coveralls; fi
