@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,py33,pypy,coverage
+envlist = py27,py33,py34,py35,pypy,pypy3,coverage,pep8
 
 [testenv]
 deps = -e{toxinidir}[test]
@@ -11,3 +11,10 @@ deps = {[testenv]deps}
        coveralls
 
 commands = py.test reg --cov reg {posargs}
+
+[testenv:pep8]
+basepython = python2
+deps = {[testenv]deps}
+       flake8
+
+commands = flake8 reg setup.py
